Fix splash panel sizing on firefox.

--- a/static/css-source/source.css
+++ b/static/css-source/source.css
@@ -234,6 +234,10 @@
 		display: flex;
 		width: 100%;
 		height: 100%;
+
+		max-width: 16em; /* Taken from .splash-panel */
+		margin: auto; /* centered */
+		min-height: 0; /* Fixes flex stretching for underspecified boxes to be the flex'd height rather than parent height. */
 }
 
 .splash-icon {
@@ -245,6 +249,10 @@
 .splash-icon > canvas {
     max-width: 100%;
     max-height: 100%;
+
+    /* only clicking the icon when it is in place (over the panel) should 
+       trigger the event for the panel, not during the animation. */
+    pointer-events: none; 
   }
 
 /*contains the container of the about text  (source)*/
